Added some hand checking and ability to read hands easier from player